[project]
name = "python-whatsapp-bot"
version = "0.1.0"
requires-python = ">=3.8"
authors = [{ name="Sergio Pires", email="sergiodanpires@gmail.com" }]
description = "Pure python project for META Whatsapp Business API wrapper."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["python", "whatsapp", "bot"]
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
repository = "https://www.github.com/Sergio-Daniel-Pire/python-whatsapp-bot"

[dependencies]
flask = "^2.0.0"
dataclasses_json = "0.6.6"

[tool.setuptools]
packages = ["whatsapp"]

[test-dependencies]
pytest = "^1.0.0"
pre-commit = "3.7.1"

[tool.flake8]
max-line-length = 100
